fix: (CXSPA-9035) StoreFinder Truncation on applying text spacing settings.
* closes: https://jira.tools.sap/browse/CXSPA-9035

--- a/feature-libs/storefinder/styles/components/_store-finder-list-item.scss
+++ b/feature-libs/storefinder/styles/components/_store-finder-list-item.scss
@@ -30,13 +30,13 @@
   }
   .cx-store-address-street {
     white-space: nowrap;
+    @include forFeature('a11yTruncatedTextStoreFinder') {
+      white-space: unset;
+    }
     overflow: hidden;
     text-overflow: ellipsis;
 
     @include media-breakpoint-down(md) {
-      white-space: normal;
-    }
-    @include forFeature('a11yTruncatedTextStoreFinder') {
       white-space: normal;
     }
   }
